--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -69,6 +69,9 @@
   # Number of threads used by the CherryPy web server
   ## cherrypy_server_threads=40
 
+  # This property specifies the maximum size of the receive buffer in bytes in thrift sasl communication.
+  ## sasl_max_buffer=2*1024*1024  # 2MB
+
   # Filename of SSL Certificate
   ## ssl_certificate=
 
