Allow users to specify interpreters on Notebook selection wheel

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -634,7 +634,7 @@
   ## Client Secret for Authorized GitHub Application
   # github_client_secret=
 
-  # One entry for each type of snippet. The first 5 will appear in the wheel.
+  # One entry for each type of snippet.
   [[interpreters]]
     # Define the name and how to connect and execute the language.
 
@@ -743,6 +743,10 @@
 
   ## Classpath to be appended to the default DBProxy server classpath.
   # dbproxy_extra_classpath=
+
+  ## Comma separated list of interpreters that should be shown on the wheel. This list takes precedence over the
+  ## order in which the interpreter entries appear. Only the first 5 interpreters will appear on the wheel.
+  # interpreters_shown_on_wheel=
 
 
 ###########################################################################
