HUE-5202 Disable extract uploaded archive using notebook connector by default

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -622,6 +622,9 @@
   ## Flag to enable the creation of a coordinator for the current SQL query.
   # enable_query_scheduling=false
 
+  ## Flag to enable the extraction of a uploaded archive in HDFS.
+  # enable_extract_uploaded_archive=false
+
   ## Base URL to Remote GitHub Server
   # github_remote_url=https://github.com
 
