HUE-5275 [metadata] Perform basic Sentry SELECT filtering on tables
For iterating on the UX and Sentry lib.

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -1541,3 +1541,6 @@
 
     # Execute this script to produce the auth password. This will be used when `auth_password` is not set.
     ## auth_password_script=
+
+    # Perform Sentry privilege filtering.
+    ## apply_sentry_permissions=False
