HUE-5442 [assist] Introduce separate cache timeout for metadata

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -1523,6 +1523,10 @@
   # For metadata tagging and enhancement features
 
   [[optimizer]]
+    # Cache timeout in milliseconds for the Optimizer metadata used in assist, autocomplete, etc.
+    # defaults to 432000000 (5 days), set to 0 to disable caching
+    # cacheable_ttl=432000000
+
     # For SQL query and table analysis
     # Base URL to Optimizer API.
     ## api_url=https://alpha.optimizer.cloudera.com
