HUE-7 [metastore] Integrate new create table from a file in metastore
(cherry picked from commit dc96714a5f1946b779c443372294c021031009ec)

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -920,6 +920,15 @@
 
 
 ###########################################################################
+# Settings to configure Metastore
+###########################################################################
+
+[metastore]
+  # Flag to turn on the new version of the create table wizard.
+  ## enable_new_create_table=false
+
+
+###########################################################################
 # Settings to configure Impala
 ###########################################################################
 
@@ -1287,7 +1296,7 @@
       # Secure connections are the default, but this can be explicitly overridden:
       ## is_secure=true
 
-      # The default calling format uses https://<bucket-name>.s3.amazonaws.com but 
+      # The default calling format uses https://<bucket-name>.s3.amazonaws.com but
       # this may not make sense if DNS is not configured in this way for custom endpoints.
       # e.g. Use boto.s3.connection.OrdinaryCallingFormat for https://s3.amazonaws.com/<bucket-name>
       ## calling_format=boto.s3.connection.S3Connection.DefaultCallingFormat
