HUE-5556 [core] Create a customizable SVG logo

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -255,6 +255,10 @@
     # defaults to 86400000 (1 day), set to 0 to disable caching
     ## cacheable_ttl=86400000
 
+    # SVG code to replace the default Hue logo in the top bar and sign in screen
+    # e.g. <image xlink:href="/static/desktop/art/hue-logo-mini-white.png" x="0" y="0" height="40" width="160" />
+    ## logo_svg=
+
   # Configuration options for user authentication into the web application
   # ------------------------------------------------------------------------
   [[auth]]
