HUE-5691 [metadata] Parameterize search fetch call limits

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -1584,4 +1584,11 @@
     ## auth_password_script=
 
     # Perform Sentry privilege filtering.
+    # Default to true automatically if the cluster is secure.
     ## apply_sentry_permissions=False
+
+    # Max number of items to fetch in one call in object search.
+    ## fetch_size_search=450
+
+    # Max number of items to fetch in one call in object search autocomplete.
+    ## fetch_size_search_interactive=450
