HUE-7 [importer] Tweak the UX and add flags to enable the new version
(cherry picked from commit ef8812cb2033b628d90f5bffacc4ce7c27374e45)

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -1167,6 +1167,9 @@
   # Flag to turn on the morphline based Solr indexer.
   ## enable_new_indexer=false
 
+  # Flag to turn on the new metadata importer.
+  ## enable_new_importer=false
+
 
 ###########################################################################
 # Settings to configure Job Designer
