HUE-5706 [core] Use grunt watch to listen to less file changes and recompile automatically.
Run this and less -> css will be done automatically.

$> npm run watch

(cherry picked from commit eb47e19368a1b0ddac84cc9910268e0e8dc08aa3)
(cherry picked from commit e5bef4c1374779200a771be5e19590875da3e382)

--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   "devDependencies": {
     "grunt": "0.4.5",
     "grunt-contrib-less": "1.3.0",
+    "grunt-contrib-watch": "0.6.1",
     "load-grunt-tasks": "3.1.0"
   },
   "scripts": {
     "devinstall": "npm cache clean && npm install && npm prune",
-    "less": "./node_modules/.bin/grunt less"
+    "less": "./node_modules/.bin/grunt less",
+    "watch": "./node_modules/.bin/grunt watch"
   },
   "files": []
 }
