HUE-5742 [core] Allow user to provide schema name for database via ini
(cherry picked from commit d717ee80fb2482e219110c2aacb1d24247a56a46)

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -527,6 +527,8 @@
     ## password_script=/path/script
     ## name=desktop/desktop.db
     ## options={}
+    # Database schema, to be used only when public schema is revoked in postgres
+    ## schema=
 
   # Configuration options for specifying the Desktop session.
   # For more info, see https://docs.djangoproject.com/en/1.4/topics/http/sessions/
