[HUE-5816] Changing default setting as allowed_hosts=['*']
Testing done:
This way user can still be able to provide declarative allowed_hosts=['settings'] And if not provided it will default to allowed_hosts=["*"] setting.

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -230,7 +230,7 @@
 
   # Comma separated list of strings representing the host/domain names that the Hue server can serve.
   # e.g.: localhost,domain1,*
-  ## allowed_hosts="host.domain1"
+  ## allowed_hosts="*"
 
   # Administrators
   # ----------------
