HUE-3228 [dashboard] Move out of Dashboard the Solr specific code

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -782,6 +782,16 @@
 
 
 ###########################################################################
+# Settings to configure your Analytics Dashboards
+###########################################################################
+
+[dashboard]
+
+  # Use latest Solr 5+ functionalities like Analytics Facets and Nested Documents (warning: still in beta).
+  ## support_latest_solr=false
+
+
+###########################################################################
 # Settings to configure your Hadoop cluster.
 ###########################################################################
 
@@ -1168,9 +1178,6 @@
 
   ## Query sent when no term is entered
   ## empty_query=*:*
-
-  # Use latest Solr 5.2+ features.
-  ## latest=false
 
 
 ###########################################################################
