HUE-3228 [dashboard] Unify the hue.ini properties

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -787,8 +787,19 @@
 
 [dashboard]
 
-  # Use latest Solr 5+ functionalities like Analytics Facets and Nested Documents (warning: still in beta).
-  ## support_latest_solr=false
+  ## Activate the Dashboard link in the menu.
+  # is_enabled=false
+
+  [[engines]]
+
+    #  [[[solr]]]
+    ##  Requires Solr 6+
+    #  analytics=false
+    #  nesting=false
+
+    #  [[[sql]]]
+    #  analytics=true
+    #  nesting=false
 
 
 ###########################################################################
