HUE-5742 [core] Set default schema to public

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -566,7 +566,7 @@
     ## name=desktop/desktop.db
     ## options={}
     # Database schema, to be used only when public schema is revoked in postgres
-    ## schema=
+    ## schema=public
 
   # Configuration options for specifying the Desktop session.
   # For more info, see https://docs.djangoproject.com/en/1.4/topics/http/sessions/
