HUE-5844 [oozie] Document workspace path parameterization

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -1079,6 +1079,7 @@
   ## sample_data_dir=...thirdparty/sample_data
 
   # Location on HDFS where the oozie examples and workflows are stored.
+  # Parameters are $TIME and $USER, e.g. /user/$USER/hue/workspaces/workflow-$TIME
   ## remote_data_dir=/user/hue/oozie/workspaces
 
   # Maximum of Oozie workflows or coodinators to retrieve in one API call.
