HUE-5846 [metadata] Update conf file to read the latest properties

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -1624,17 +1624,32 @@
 
   [[navigator]]
     # For tagging tables, files and getting lineage of data.
-    # Navigator API URL (without version suffix)
+    # Navigator API URL (without version suffix).
     ## api_url=http://localhost:7187/api
 
-    # Navigator API HTTP authentication username and password
-    # Override the desktop default username and password of the hue user used for authentications with other services.
-    # e.g. Used for LDAP/PAM pass-through authentication.
-    ## auth_username=hue
-    ## auth_password=
+    # Which authentication to use: CM or external via LDAP or SAML.
+    ## navmetaserver_auth_type=CMDB
 
-    # Execute this script to produce the auth password. This will be used when `auth_password` is not set.
-    ## auth_password_script=
+    # Username of the CM user used for authentication.
+    ## auth_cmusername=hue
+    # CM password of the user used for authentication.
+    ## auth_cmpassword=
+    # Execute this script to produce the CM password. This will be used when the plain password is not set.
+    # auth_password_script=
+
+    # Username of the LDAP user used for authentication.
+    ## auth_ldapusername=hue
+    # LDAP password of the user used for authentication.
+    ## auth_ldappassword=
+    # Execute this script to produce the LDAP password. This will be used when the plain password is not set.
+    ## auth_ldappassword_script=
+
+    # Username of the SAML user used for authentication.
+    ## auth_samlusername=hue
+    ## SAML password of the user used for authentication.
+    # auth_samlpassword=
+    # Execute this script to produce the SAML password. This will be used when the plain password  is not set.
+    ## auth_samlpassword_script=
 
     # Perform Sentry privilege filtering.
     # Default to true automatically if the cluster is secure.
