HUE-5863 [oozie] Add an Impala action

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -1094,6 +1094,9 @@
   ## Flag to enable Oozie backend filtering instead of doing it at the page level in Javascript. Requires Oozie 4.3+.
   # enable_oozie_backend_filtering=true
 
+  ## Flag to enable the Impala action.
+  # enable_impala_action=false
+
 
 ###########################################################################
 # Settings to configure the Filebrowser app
