HUE-5994 [spark] Kerberos support config

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -1060,6 +1060,9 @@
   # Configure Livy to start in local 'process' mode, or 'yarn' workers.
   ## livy_server_session_kind=yarn
 
+  # Whether Livy requires client to perform Kerberos authentication.
+  ## security_enabled=false
+
   # Host of the Sql Server
   ## sql_server_host=localhost
 
