HUE-5993 [metastore Manual CSV create table error is unclear

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -1223,6 +1223,9 @@
   # Flag to turn on the morphline based Solr indexer.
   ## enable_new_indexer=false
 
+  # Oozie workspace template for indexing.
+  ## config_indexer_libs_path=/tmp/smart_indexer_lib
+
   # Flag to turn on the new metadata importer.
   ## enable_new_importer=false
 
