--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -793,6 +793,9 @@
   ## Activate the Dashboard link in the menu.
   # is_enabled=true
 
+  ## Activate the SQL Dashboard (beta).
+  # has_sql_enabled=false
+
   [[engines]]
 
     #  [[[solr]]]
