HUE-6162 [core] Display a warning and offer to switch to the LB port if Hue is on a non-LB port

--- a/desktop/conf.dist/hue.ini
+++ b/desktop/conf.dist/hue.ini
@@ -28,6 +28,9 @@
   http_host=0.0.0.0
   http_port=8888
 
+  # A comma-separated list of available Hue load balancers
+  ## hue_load_balancer=
+
   # Time zone name
   time_zone=America/Los_Angeles
 
